Made base_test steps running, however base_test_build_run only works without debug builds

--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/base_test_build_run/Dockerfile
@@ -1,25 +1,6 @@
-FROM {{language_deps}}
+FROM {{base_test_deps}}
 
 RUN mkdir /conf /buckets
-
-COPY --from={{base_test_deps}} /usr /usr
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{base_test_deps}} /lib /lib
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{base_test_deps}} /bin /bin
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{base_test_deps}} /opt /opt
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{base_test_deps}} /etc /etc
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
-COPY --from={{base_test_deps}} /env /env
-RUN true # workaround for https://github.com/moby/moby/issues/37965
-
 
 RUN ldconfig
 
@@ -27,7 +8,8 @@ RUN mkdir /exaudfclient /exaudf
 COPY /exaudfclient/base /exaudfclient/base
 
 WORKDIR /exaudfclient/base
-RUN ["/bin/bash", "-c", "source /env && bash build.sh --config no-tty -c dbg --config python --config test-binaries-py3"]
+# We need to build with optimize here, because the debug build fails to run with a runtime linking error regarding protobuf
+RUN ./build.sh --config no-tty --config optimize --config python --config test-binaries-py3
 RUN cp -r -L bazel-bin/* /exaudf
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3_static
