--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/udfclient_deps/Dockerfile
@@ -2,7 +2,7 @@ FROM {{ conda_deps }}
 
 COPY udfclient_deps/packages /build_info/packages/udfclient_deps
 
-RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/udfclient_deps/conda_packages --with-versions
+RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/udfclient_deps/conda_packages --channel-file /build_info/packages/udfclient_deps/conda_channels --with-versions
 
 ENV PROTOBUF_LIBRARY_PREFIX=/opt/conda/lib
 ENV PROTOBUF_INCLUDE_PREFIX=/opt/conda/include
