--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_deps/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/build_deps/Dockerfile
@@ -3,7 +3,7 @@ FROM {{language_deps}}
 RUN mkdir -p /build_info/packages
 COPY build_deps/packages /build_info/packages/build_deps
 
-RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/build_deps/conda_packages --with-versions
+RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/build_deps/conda_packages --channel-file /build_info/packages/build_deps/conda_channels --with-versions
 
 RUN curl -L -o swig-2.0.4.tar.gz https://storage.googleapis.com/exasol-script-languages-dependencies/swig-2.0.4.tar.gz && \
     tar zxf swig-2.0.4.tar.gz && \
