--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
@@ -3,4 +3,4 @@ FROM {{ language_deps }}
 RUN mkdir -p /build_info/packages
 COPY flavor_base_deps/packages /build_info/packages/flavor_base_deps
 
-RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/flavor_base_deps/conda_packages --with-versions
+RUN /scripts/install_scripts/install_via_conda.pl --file /build_info/packages/flavor_base_deps/conda_packages --channel-file /build_info/packages/flavor_base_deps/conda_channels --with-versions
