Remove python-3.6-data-science-cuda-EXASOL-6.2.0 flavor and introduce python-3.8-cuda-conda-minimal-EXASOL-6.2.0 flavor with nvidia driver lib installation script

--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -27,6 +27,13 @@ batch:
         compute-type: BUILD_GENERAL1_MEDIUM
         privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
+    - identifier: build_python_38_cuda_conda_minimal_EXASOL_620
+      env:
+        variables:
+          FLAVOR: python-3.8-cuda-conda-minimal-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_MEDIUM
+        privileged-mode: true
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
     - identifier: build_python_38_minimal_EXASOL_620
       env:
         variables:
