--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -10,27 +10,27 @@ batch:
       env:
         variables:
           FLAVOR: python-3.6-data-science-cuda-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_LARGE
+        privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_LARGE
     - identifier: build_python_36_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.6-minimal-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_LARGE
+        privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_LARGE
     - identifier: build_python_37_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.7-minimal-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_LARGE
+        privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_LARGE
     - identifier: build_python_38_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.8-minimal-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_LARGE
+        privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
-      privileged-mode: true
-      type: BUILD_GENERAL1_LARGE
