--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ python = ">=3.8,<4"
 importlib-resources = ">=5.4.0"
 exasol_script_languages_container_tool = { url = "https://github.com/exasol/script-languages-container-tool/releases/download/0.14.0/exasol_script_languages_container_tool-0.14.0-py3-none-any.whl" }
 exasol-script-languages-container-ci = {url = "https://github.com/exasol/script-languages-container-ci/releases/download/0.2.0/exasol_script_languages_container_ci-0.2.0-py3-none-any.whl"}
-exasol-script-languages-container-ci-setup = {url = "https://github.com/exasol/script-languages-container-ci-setup/releases/download/0.3.0/exasol_script_languages_container_ci_setup-0.3.0-py3-none-any.whl"}
+exasol-script-languages-container-ci-setup = {git = "https://github.com/exasol/script-languages-container-ci-setup.git", branch="bug/22_fixed_batch_buildpsec_entry"}
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
