Reintroduce debug build for base_test_build_run step

--- a/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/base_test_build_run/Dockerfile
+++ b/flavors/python-3.8-conda-minimal-EXASOL-6.2.0/flavor_base/base_test_build_run/Dockerfile
@@ -9,7 +9,7 @@ COPY /exaudfclient/base /exaudfclient/base
 
 WORKDIR /exaudfclient/base
 # We need to build with optimize here, because the debug build fails to run with a runtime linking error regarding protobuf
-RUN ./build.sh --config no-tty --config optimize --config python --config test-binaries-py3
+RUN ./build.sh --config no-tty -c dbg --config python --config test-binaries-py3
 RUN cp -r -L bazel-bin/* /exaudf
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3
 RUN ./test_udfclient.sh /exaudf/exaudfclient_py3_static
