#329 split exaudflib cc into several files (#212)
Related to https://github.com/exasol/script-languages-release/issues/329

--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -5,8 +5,8 @@ load("//:variables.bzl", "VM_ENABLED_DEFINES")
 
 cc_library(
     name = "scriptoptionlines",
-    hdrs = ["scriptoptionlines.h"],
-    srcs = ["scriptoptionlines.cc","scriptoptionlines.h"],
+    hdrs = ["vm/scriptoptionlines.h"],
+    srcs = ["vm/scriptoptionlines.cc","vm/scriptoptionlines.h"],
     copts= ["-fno-lto"],
     # We deactivate link time optimization, because otherwise we get the following linker/compiler error while linking/compiling exaudfclient
     # function ExecutionGraph::extractOptionLine(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >&, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> >, unsigned long&, std::function<void (char const*)>): error: undefined reference to 'std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > std::operator+<char, std::char_traits<char>, std::allocator<char> >(std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, char const*)'
@@ -15,8 +15,8 @@ cc_library(
 
 cc_library(
     name = "script_data_transfer_objects",
-    srcs = ["script_data_transfer_objects.cc","script_data_transfer_objects.h"],
-    hdrs = ["script_data_transfer_objects.h"],
+    srcs = ["swig/script_data_transfer_objects.cc","swig/script_data_transfer_objects.h"],
+    hdrs = ["swig/script_data_transfer_objects.h"],
     copts= select({
         "//:benchmark": ["-fno-lto"],
         "//conditions:default": []
@@ -29,9 +29,9 @@ cc_library(
 
 cc_library(
     name = "script_data_transfer_objects_wrapper",
-    srcs = ["script_data_transfer_objects_wrapper.cc","script_data_transfer_objects_wrapper.h"],
+    srcs = ["swig/script_data_transfer_objects_wrapper.cc","swig/script_data_transfer_objects_wrapper.h"],
     deps = [":script_data_transfer_objects"],
-    hdrs = ["script_data_transfer_objects_wrapper.h"],
+    hdrs = ["swig/script_data_transfer_objects_wrapper.h"],
     copts= select({
         "//:benchmark": ["-fno-lto"],
         "//conditions:default": []
@@ -46,7 +46,8 @@ cc_library(
 cc_library(
     name = "header",
     hdrs = [
-        "exaudflib.h",
+        "udf_plugin_interface.h", "load_dynamic.h", "vm/swig_vm.h",
+        "swig/swig_common.h", "swig/swig_meta_data.h", "swig/swig_result_handler.h", "swig/swig_table_iterator.h"
     ],
     alwayslink=True,
 )
@@ -84,13 +85,26 @@ cc_library(
 # Do not depend on this library in the langauge container or exaudfclient. 
 # The only target which must depend on it is //:libexaudflib-complete.so.
 # If you depend on this target you will load protobuf into your linker namespace
-# which might cause problems with tensorflow. If you need //exaudflib:exaudflib.h,
+# which might cause problems with tensorflow. If you need
 # "//exaudflib:scriptoptionlines","//exaudflib:script_data_transfer_objects" or
 # "//exaudflib:script_data_transfer_objects_wrapper" in the language container 
 # depend directly on them
 cc_library(
     name = "exaudflib",
-    srcs = ["exaudflib.cc"],
+    srcs = ["vm/swig_vm.cc",
+            "swig/swig_common.cc", "swig/swig_meta_data.cc", "swig/swig_result_handler.cc", "swig/swig_table_iterator.cc",
+            "impl/exaudflib_main.cc",
+            "impl/msg_conversion.cc", "impl/msg_conversion.h",
+            "impl/check.cc", "impl/check.h",
+            "impl/socket_info.cc", "impl/socket_info.h",
+            "impl/socket_low_level.cc", "impl/socket_low_level.h",
+            "impl/global.cc", "impl/global.h",
+            "impl/socket_high_level.cc", "impl/socket_high_level.h",
+            "impl/swig/swig_factory.cc",
+            "impl/swig/swig_table_iterator.h", "impl/swig/swig_table_iterator.cc",
+            "impl/swig/swig_meta_data.h", "impl/swig/swig_meta_data.cc",
+            "impl/swig/swig_result_handler.h", "impl/swig/swig_result_handler.cc",
+            "impl/swig/swig_general_iterator.h", "impl/swig/swig_general_iterator.cc"],
     linkstatic = 1,
     alwayslink = True,
     defines = VM_ENABLED_DEFINES,
