--- a/exaudfclient/base/python/BUILD
+++ b/exaudfclient/base/python/BUILD
@@ -5,3 +5,8 @@ exports_files([
     "extend_exascript_python_preset_py.sh",
     "pythoncontainer.cc"
     ])
+
+cc_library(
+    name = "pythoncontainer_header",
+    hdrs = ["pythoncontainer.h"]
+)
