--- a/exaudfclient/base/python/python3/BUILD
+++ b/exaudfclient/base/python/python3/BUILD
@@ -109,11 +109,12 @@ cc_library(
     srcs = [":python_ext_dataframe.cc"],
     deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps",
            "//exaudflib:header", "//:debug_message_h"],
-    alwayslink=True,
 )
 
+# We need to set srcs and deps to :pyextdataframe, because we don't use alwayslink anymore. See also, libexaudflib_complete.so, there we do it the same way.
 cc_binary(
     name = "pyextdataframe.so",
     linkshared = 1,
+    srcs = [":pyextdataframe"],
     deps = [":pyextdataframe"]
 )
