--- a/tests/requirements.txt
+++ b/tests/requirements.txt
@@ -4,4 +4,4 @@ lxml
 docker
 scipy
 #https://github.com/exasol/exasol-python-test-framework/releases/download/0.3.0/exasol_python_test_framework-0.3.0-py3-none-any.whl
-git+https://github.com/exasol/exasol-python-test-framework.git@feature/available_python_packages_test_function
+git+https://github.com/exasol/exasol-python-test-framework.git@main
