--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -27,17 +27,17 @@ batch:
         compute-type: BUILD_GENERAL1_MEDIUM
         privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
-    - identifier: build_python_38_conda_minimal_EXASOL_620
-      env:
-        variables:
-          FLAVOR: python-3.8-conda-minimal-EXASOL-6.2.0
-        compute-type: BUILD_GENERAL1_MEDIUM
-        privileged-mode: true
-      buildspec: ./aws-code-build/ci/build_buildspec.yaml
     - identifier: build_python_38_minimal_EXASOL_620
       env:
         variables:
           FLAVOR: python-3.8-minimal-EXASOL-6.2.0
+        compute-type: BUILD_GENERAL1_MEDIUM
+        privileged-mode: true
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
+    - identifier: build_template_Exasol_all_python_38_conda
+      env:
+        variables:
+          FLAVOR: template-Exasol-all-python-3.8-conda
         compute-type: BUILD_GENERAL1_MEDIUM
         privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
