#590: Add template-Exasol-all-python-3.8-conda flavor (#289)
* Adapt UDFClient external dependency discovery to conda
* Adapt old flavors to new environment variables for the udfclient
* Remove zmq dependency from exaudfclient_bin target and python cpp targets, because they are not correct and were only added because of https://github.com/exasol/script-languages/pull/212#discussion_r871853706.
* Refactoring in python_repository.bzl
* Fixed issue with protobuf dependency (#308)
* Link exaudflib dynamically, to fix missing symbols while loading libexaudflib_complete.so, which occur when we link exaudflib statically.
* Replace pyextdataframe cc_library directly with the cc_binary
* Remove exaudflib-deps from pyextdataframe.so, because they are not
needed for this shared library and seem to cause linker issues when
present

Co-authored-by: Thomas Ubensee <34603111+tomuben@users.noreply.github.com>

--- a/aws-code-build/ci/buildspec.yaml
+++ b/aws-code-build/ci/buildspec.yaml
@@ -34,3 +34,10 @@ batch:
         compute-type: BUILD_GENERAL1_MEDIUM
         privileged-mode: true
       buildspec: ./aws-code-build/ci/build_buildspec.yaml
+    - identifier: build_template_Exasol_all_python_38_conda
+      env:
+        variables:
+          FLAVOR: template-Exasol-all-python-3.8-conda
+        compute-type: BUILD_GENERAL1_MEDIUM
+        privileged-mode: true
+      buildspec: ./aws-code-build/ci/build_buildspec.yaml
