--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -1,5 +1,5 @@
 package(default_visibility = ["//visibility:public"])
-exports_files(["filter_swig_code.py", "build_integrated.py","LICENSE-exasol-script-api.txt", 
+exports_files(["filter_swig_code.py", "build_integrated.py","LICENSE-exasol-script-api.txt",
 	       "create_binary_wrapper.sh", "create_binary_wrapper_valgrind.sh", "create_binary_wrapper_valgrind_massif.sh"])
 
 load("//:variables.bzl", "VM_ENABLED_DEFINES")
@@ -64,25 +64,24 @@ cc_library(
     hdrs = [
         "debug_message.h"
     ],
-    alwayslink = True,
 )
 
 # Using cc_binary to build a shared library as output target is a workaround, because
-# Bazel's cc_library are only intermediate stage and can be used as output target.
-# It is necessary to include all dependencies of //exaudflib:exaudflib into deps and srcs,
-# otherwise dlmopen won't find the symbols from these dependencies. The target //exaudflib:exaudflib-deps
-# won't work either, because it only contains the libraries only as dependencies.
+# Bazel's cc_library are only intermediate stages and can be used as output target.
+# It is necessary to include //exaudflib:exaudflib into deps and srcs, because
+# otherwise dlmopen won't find the symbols of exaudflib and its dependencies. The target //exaudflib:exaudflib-deps
+# won't work either, because it only contains the libraries as dependencies.
+# Bazel builts a static library (.a) and a dynamic library (.so) out of exaudflib:exaudflib.
+# In the libexaudflib_complete.so-2.params, we saw that Bazel uses both libraries to built libexaudflib_complete.so.
+# Experiments have shown that we get missing symbols during loading libexaudflib_complete.so, if we only built the static library. 
 cc_binary(
     name = "libexaudflib_complete.so",
     linkshared = 1,
-    srcs = ["//exaudflib:exaudflib", 
-            "//exaudflib:zmqcontainer", 
-            "//exaudflib:script_data_transfer_objects_wrapper", 
-            "//exaudflib:script_data_transfer_objects"
-            ],
-    deps = [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
-    defines = VM_ENABLED_DEFINES
+    srcs = ["//exaudflib:exaudflib"],
+    deps = ["//exaudflib:exaudflib"],
+    defines = VM_ENABLED_DEFINES,
 )
+
 
 VM_ENABLED_DEPS=select({
         ":benchmark": ["//benchmark_container:benchmark_container"],
@@ -98,19 +97,19 @@ VM_ENABLED_DEPS=select({
 VM_PYTHON2_DEPS=select({
         ":python": ["//python/python2:pythoncontainer"],
         "//conditions:default": []
-    }) 
+    })
 
 VM_PYTHON3_DEPS=select({
         ":python": ["//python/python3:pythoncontainer"],
         "//conditions:default": []
-    }) 
+    })
 
 cc_binary(
     name = "exaudfclient_bin",
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
-          ["//exaudflib:exaudflib-deps"],
+           ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"],
 )
@@ -120,7 +119,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
-            ["//exaudflib:exaudflib-deps"],
+           ["//exaudflib:exaudflib-deps"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"]
 )
@@ -143,7 +142,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
-          ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+          ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmq", "@protobuf//:protobuf"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"],
 )
@@ -153,7 +152,7 @@ cc_binary(
     srcs = ["exaudfclient.cc", "load_dynamic.cc"],
     linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
     deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
-            ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+            ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmq", "@protobuf//:protobuf"],
     defines = VM_ENABLED_DEFINES,
     data = [":libexaudflib_complete.so"],
 )
@@ -174,7 +173,7 @@ sh_library(
         "//:stdout_to_bucketfs": ["//:create_binary_wrapper_stdout_to_bucketfs.sh"],
         "//conditions:default": ["//:create_binary_wrapper.sh"]
     })
-) 
+)
 
 SLOW_WRAPPER_BINARY_PY2="""$(location //:wrapper_generator_bin) "$(location exaudfclient_bin)" "$(location exaudfclient)" "$(location exaudfclient.template.sh)" """
 FAST_BINARY_PY2="""cp "$(location exaudfclient_bin)" "$(location exaudfclient)" """
@@ -237,4 +236,3 @@ genrule(
     srcs = [":exaudfclient_py3_static_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
     output_to_bindir = True
 )
-
