--- a/exaudfclient/base/python/python3/BUILD
+++ b/exaudfclient/base/python/python3/BUILD
@@ -104,16 +104,10 @@ genrule(
     srcs = [":pyextdataframe.so"],
 )
 
-cc_library(
-    name = "pyextdataframe",
-    srcs = [":python_ext_dataframe.cc"],
-    deps = ["@python3//:python3","@numpy//:numpy","//exaudflib:exaudflib-deps",
-            "//exaudflib:header", "//:debug_message_h"],
-    alwayslink=True,
-)
-
 cc_binary(
     name = "pyextdataframe.so",
     linkshared = 1,
-    deps = [":pyextdataframe"]
+    srcs = [":python_ext_dataframe.cc"],
+    deps = ["@python3//:python3","@numpy//:numpy",
+           "//exaudflib:header", "//:debug_message_h"],
 )
