--- a/.github/workflows/check_package_diffs.yaml
+++ b/.github/workflows/check_package_diffs.yaml
@@ -9,6 +9,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      fetch-depth: 0
 
     - name: Setup Python 3.8
       uses: actions/setup-python@v2
